--- a/portfolio_using_bootstrap.html
+++ b/portfolio_using_bootstrap.html
@@ -1,84 +1,1 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <title>Title</title>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <link rel="stylesheet" href="./portfolio_using_bootstrap.css">
-  <script src="https://kit.fontawesome.com/6501ea0c5f.js" crossorigin="anonymous"></script>
-
-  </head>
-  <body>
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-  <nav class="navbar navbar-expand-sm navbar-dark" style="background-color: #e9e7e6; height:70px;width:100%">
-      <a class="navbar-brand" style="color:black;text-transform: uppercase;font-weight: 480;font-size:21px;" href="#">A k h i l</a>
-      <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-controls="collapsibleNavId"
-          aria-expanded="false" aria-label="Toggle navigation"></button>
-      <div class="collapse navbar-collapse" id="collapsibleNavId">
-          <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-              <li class="nav-item active">
-                  <a class="nav-link" style="color:grey;font-weight:bold;margin-left:300px;margin-top:11px;" href="#">Home&nbsp;&nbsp;<span class="sr-only">(current)</span></a>
-              </li>
-              <li class="nav-item">
-                  <a class="nav-link" style="color:grey ;margin-top:11px;font-weight:bold;" href="./About.html" target="_blank">About&nbsp;&nbsp;</a>
-              </li>
-              <li class="nav-item">
-                  <a class="nav-link" style="color:grey ;margin-top:11px;font-weight:bold;" href="./resume.html" target="_blank">Resume&nbsp;&nbsp;</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" style="color:grey ;margin-top:11px;font-weight:bold;" href="#">Services&nbsp;&nbsp;</a>
-            </li>
-              <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="#" id="dropdownId" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="color:grey ;margin-top:11px;font-weight:bold;">Contact</a>
-                  <div class="dropdown-menu" aria-labelledby="dropdownId">
-                      <a class="dropdown-item" href="#" data-toggle="tooltip" title="9908405863">Mobile</a>
-                      <script>
-                        $(document).ready(function(){
-                          $('[data-toggle="tooltip"]').tooltip();
-                        });
-                        </script>
-                      <a class="dropdown-item" href="#" href="#" data-toggle="tooltip" title="akhilroy.sangem@gmail.com">Email</a>
-                  </div>
-              </li>
-              <li class="nav-item active">
-                <a class="nav-link" style="color:grey;font-weight:bold;margin-left:300px;margin-top:11px;" href="#"><i class="fa-brands fa-facebook"></i><span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" style="color:grey ;margin-top:11px;font-weight:bold;" href="#"><i class="fa-brands fa-instagram"></i></a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" style="color:grey ;margin-top:11px;font-weight:bold;" href="#"><i class="fa-brands fa-linkedin"></i></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" style="color:grey ;margin-top:11px;font-weight:bold;" href="#"><i class="fa-brands fa-youtube"></i></a>
-          </li>
-          </ul>
-          </form>
-      </div>
-  </nav>
-  <div class="container" style="width: 800px; height: 500px;text-align:center;padding-top:200px;padding-left:500px;justify-content:center">
-    <h1>Akhil Sangem</h1>
-    <div class="des" style="font-size: 20px; line-height:30px;">|&nbsp; FRONT-END DEVELOPER |&nbsp; |&nbsp;UI/UX DESIGNER |</div>
-    </div>
-      <a name="" id="" class="btn btn-primary" href="./About.html" target="_blank" role="button" style="color: white;background-color:#35b7a6;margin-left:870px;margin-top:-300px">About Me</a>
-    <style>
-      body{
-        background-image: url(./307853463_390419759960269_2619048234447652876_n.webp);
-        background-repeat: no-repeat;
-        background-size: cover;
-      }
-      .des{
-        font-weight:500;
-        background-color: white;
-        opacity: 0.6;
-      }
-    </style>
-    </body>
-</html>
+portfolio
