--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
   </nav>
   <div class="container" style="width: 800px; height: 500px;text-align:center;padding-top:200px;padding-left:500px;justify-content:center">
     <h1>Akhil Sangem</h1>
-    <div class="container" style="font-size: 20px; line-height:30px;">|&nbsp; FRONT-END DEVELOPER |&nbsp; |&nbsp;UI/UX DESIGNER |</div>
+    <div class="des" style="font-size: 20px; line-height:30px;">|&nbsp; FRONT-END DEVELOPER |&nbsp; |&nbsp;UI/UX DESIGNER |</div>
     </div>
       <a name="" id="" class="btn btn-primary" href="./About.html" target="_blank" role="button" style="color: white;background-color:#35b7a6;margin-left:870px;margin-top:-300px">About Me</a>
     
