--- a/About.html
+++ b/About.html
@@ -21,8 +21,13 @@
         <br>
         <p>&nbsp;&nbsp;&nbsp;&nbsp;Iam a Front-end Developer and UI/UX Designer based in Hyderabad. The design work i create is very much creative and dynamic. <br> &nbsp;&nbsp;&nbsp;&nbsp;I
             love what I do, and adore the creative process. I designed many templates for many websites which gave me success.
-            <br>&nbsp;&nbsp;&nbsp; I have created Rapido Website and etc. Iam an expert in HTML/CSS & JS.
+            <br>&nbsp;&nbsp;&nbsp; I have created many user-friendly Website. Iam an expert in HTML/CSS & JS.
         </p>
+      <h1>Here are the links to the sites which i have developed.</h1>
+      <ul>
+        <li><a href="https://meghanainteriors.me/">Meghana interiors website</a><li>
+        <li><a href="https://akhilsangem.me/jayasrifashions.github.io/">Jayasri Fashions Website</a></li>
+        <ul>
     </div>
 <style>
     body{
