--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
                         <p class="lead" style="padding-left: 0px;margin-left: -603px;padding-top: 0px;padding-bottom: 12px;"><br><span style="color: rgb(235, 239, 242); background-color: rgba(7, 248, 233, 0);">&nbsp;&nbsp;Iam a Front-end Developer and UI/UX Designer based in Hyderabad. The design work i create is very much creative and dynamic.</span><br><span style="color: rgb(235, 239, 242); background-color: rgba(7, 248, 233, 0);">&nbsp;&nbsp;&nbsp;&nbsp;I love what I do, and adore the creative process. I designed many templates for many websites which gave me success.</span><br><span style="color: rgb(235, 239, 242); background-color: rgba(7, 248, 233, 0);">&nbsp;&nbsp;&nbsp; I have created many user-friendly Websites.&nbsp; Iam an expert in HTML/CSS &amp; JS.</span></p>
                     <h1>Here are the links to the sites which i have developed.</h1>
       <ul>
-        <li><a href="https://meghanainteriors.me/">Meghana interiors website</a><li>
-        <li><a href="https://akhilsangem.me/jayasrifashions.github.io/">Jayasri Fashions Website</a></li>
+        <li style="color:blue"><a href="https://meghanainteriors.me/">Meghana interiors website</a><li>
+        <li style="color:blue"><a href="https://akhilsangem.me/jayasrifashions.github.io/">Jayasri Fashions Website</a></li>
         <ul>
                     </div>
                 </div>
